--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 						<a class="nav-link" href="#OurGallery">Gallery</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Blog</a>
+						<a class="nav-link" href="#OurBlog">Blog</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="#">Shop</a>
@@ -524,7 +524,7 @@
 					<!--First slide-->
 					<div class="carousel-item active">
 						<div class="row">
-							<div class="card col-md-4">
+							<div class="card my-3 col-md-4">
 								<div class="card-body text-center border border-muted">
 									<i class="fas fa-dumpster fa-2x text-success"></i>
 									<h5 class="card-title">Commercial service</h5>
@@ -542,7 +542,7 @@
 									<a href="#" class="card-link text-success">Order now</a>
 								</div>
 							</div>
-							<div class="card col-md-4">
+							<div class="card my-3 col-md-4">
 								<div class="card-body text-center border border-muted">
 									<i class="fas fa-industry fa-2x text-success"></i>
 									<h5 class="card-title">Industrial service</h5>
@@ -560,7 +560,7 @@
 									<a href="#" class="card-link text-success">Order now</a>
 								</div>
 							</div>
-							<div class="card col-md-4">
+							<div class="card my-3 col-md-4">
 								<div class="card-body text-center border border-muted">
 									<i class="fas fa-home fa-2x text-success"></i>
 									<h5 class="card-title">Residential service</h5>
@@ -585,7 +585,7 @@
 					<!--Second slide-->
 					<div class="carousel-item">
 						<div class="row">
-							<div class="card col-md-4">
+							<div class="card my-3 col-md-4">
 								<div class="card-body text-center border border-muted">
 									<i class="fas fa-dumpster fa-2x text-success"></i>
 									<h5 class="card-title">Commercial service</h5>
@@ -603,7 +603,7 @@
 									<a href="#" class="card-link text-success">Order now</a>
 								</div>
 							</div>
-							<div class="card col-md-4">
+							<div class="card my-3 col-md-4">
 								<div class="card-body text-center border border-muted">
 									<i class="fas fa-industry fa-2x text-success"></i>
 									<h5 class="card-title">Industrial service</h5>
@@ -621,7 +621,7 @@
 									<a href="#" class="card-link text-success">Order now</a>
 								</div>
 							</div>
-							<div class="card col-md-4">
+							<div class="card my-3 col-md-4">
 								<div class="card-body text-center border border-muted">
 									<i class="fas fa-home fa-2x text-success"></i>
 									<h5 class="card-title">Residential service</h5>
@@ -646,7 +646,7 @@
 					<!--Third slide-->
 					<div class="carousel-item">
 						<div class="row">
-							<div class="card col-md-4">
+							<div class="card my-3 col-md-4">
 								<div class="card-body text-center border border-muted">
 									<i class="fas fa-dumpster fa-2x text-success"></i>
 									<h5 class="card-title">Commercial service</h5>
@@ -664,7 +664,7 @@
 									<a href="#" class="card-link text-success">Order now</a>
 								</div>
 							</div>
-							<div class="card col-md-4">
+							<div class="card my-3 col-md-4">
 								<div class="card-body text-center border border-muted">
 									<i class="fas fa-industry fa-2x text-success"></i>
 									<h5 class="card-title">Industrial service</h5>
@@ -682,7 +682,7 @@
 									<a href="#" class="card-link text-success">Order now</a>
 								</div>
 							</div>
-							<div class="card col-md-4">
+							<div class="card my-3 col-md-4">
 								<div class="card-body text-center border border-muted">
 									<i class="fas fa-home fa-2x text-success"></i>
 									<h5 class="card-title">Residential service</h5>
@@ -715,7 +715,7 @@
 	<section id="OurGallery" class="my-5">
 		<div class="container">
 			<div class="text-center">
-				<h5 class="text-success">Electrical Gallery</h5>
+				<h5 class="text-success mt-5">Electrical Gallery</h5>
 				<h2 class="m-auto p-3">Our Photo Gallery</h2>
 				<p class="col-lg-8 mx-auto ">You will really enjoy doing business with us! Fast, electrical estimates at
 					a competitive price. We save you time and money. Interested? Check out our photos.</p>
@@ -749,9 +749,29 @@
 						<a class="lightbox" href="img/gallery/gallery-img03.jpg">
 							<img class="img-fluid" src="img/gallery/gallery-img03.jpg" alt="Card image cap"></a>
 					</figure>
-					<figure class="col-lg-4 col-md-6 animation all 1">
+					<figure class="col-lg-4 col-md-6 animation all 2">
 						<a class="lightbox" href="img/gallery/gallery-img04.jpg">
 							<img class="img-fluid" src="img/gallery/gallery-img04.jpg" alt="Card image cap"></a>
+					</figure>
+					<figure class="col-lg-4 col-md-6 animation all 5">
+						<a class="lightbox" href="img/gallery/gallery-img05.jpg">
+							<img class="img-fluid" src="img/gallery/gallery-img05.jpg" alt="Card image cap"></a>
+					</figure>
+					<figure class="col-lg-4 col-md-6 animation all 3">
+						<a class="lightbox" href="img/gallery/gallery-img06.jpg">
+							<img class="img-fluid" src="img/gallery/gallery-img06.jpg" alt="Card image cap"></a>
+					</figure>
+					<figure class="col-lg-4 col-md-6 animation all 5">
+						<a class="lightbox" href="img/gallery/gallery-img07.jpg">
+							<img class="img-fluid" src="img/gallery/gallery-img07.jpg" alt="Card image cap"></a>
+					</figure>
+					<figure class="col-lg-4 col-md-6 animation all 4">
+						<a class="lightbox" href="img/gallery/gallery-img08.jpg">
+							<img class="img-fluid" src="img/gallery/gallery-img08.jpg" alt="Card image cap"></a>
+					</figure>
+					<figure class="col-lg-4 col-md-6 animation all 1">
+						<a class="lightbox" href="img/gallery/gallery-img09.jpg">
+							<img class="img-fluid" src="img/gallery/gallery-img09.jpg" alt="Card image cap"></a>
 					</figure>
 				</div>
 			</div>
@@ -759,8 +779,132 @@
 	</section>
 	<!--Gallery section -->
 
-	<!-- End of Three Section Column -->
-
+	<!-- Blog Section Two Column -->
+	<div class="container">
+		<div id=OurBlog>
+			<div class="text-lg-center">
+				<h5 class="text-success mt-5">Electrical Blog</h5>
+				<h2 class="m-auto p-3">Our Blog Posts</h2>
+				<p class="col-lg-8 mx-auto ">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quibusdam nisi
+					vero
+					distinctio ipsa exercitationem iste amet sequi porro tenetur perferendis..</p>
+			</div>
+			<div class="row">
+				<div class="col-lg-8">
+					<img src="img/blog_img01.jpg" class="w-100" alt="">
+					<div class="">
+						<p class="mt-lg-5"><span class="mr-3 font-italic">23 Nov, 2016</span><span
+								class="mr-3 font-italic">
+								Posted by admin
+							</span><span class="mr-3 font-italic">2 Comments</span></p>
+						<h2>
+							Outdoor and Motion Lighting
+						</h2>
+						<blockquote class="blockquote">
+							<p class="text-muted"> Electricity is arguably the most valuable resource we have in our
+								modern
+								society. Without
+								electricity, most of the things we do and rely on on a daily basis wouldn’t be there.
+							</p>
+							<footer class="blockquote-footer font-weight-bold poppi">Teresa and Kevin K.</footer>
+						</blockquote>
+						<h3>Home Electrical Repair</h3>
+						<p class="text-muted">Electricity is arguably the most valuable resource we have in our modern
+							society. Without electricity, most of the things we do and rely on on a daily basis wouldn’t
+							be
+							there. So while electricity is so ingrained into our lives that we can take it for granted
+							and
+							hardly notice it’s there, if there’s an electrical problem, it can be difficult to notice
+							anything else.</p>
+						<p class="text-muted">Our electrical repair technicians know what a hassle any electrical
+							problems
+							can be, which is why we’ll always respond to any requests for service as quickly as
+							possible.
+							And because all of our technicians are licensed, background checked, and professionally
+							trained,
+							you’re guaranteed to receive the best quality service and workmanship available when you
+							call
+							us. We can assist with all your electric needs including:</p>
+						<ul class="row">
+							<div class="col-lg-6">
+								<li class=""><i class="fas fa-check text-success mr-1"></i>Lighting Installation
+								</li>
+								<li class=""><i class="fas fa-check text-success mr-1"></i>Pool/Spa Lighting</li>
+								<li class=""><i class="fas fa-check text-success mr-1"></i>Electrical Panel
+									Replacement</li>
+								<li class=""><i class="fas fa-check text-success mr-1"></i>LED Lighting</li>
+								<li class=""><i class="fas fa-check text-success mr-1"></i>Commercial Service</li>
+							</div>
+							<div class="col-lg-6">
+								<li class=""><i class="fas fa-check text-success mr-1"></i>Outdoor Lighting</li>
+								<li class=""><i class="fas fa-check text-success mr-1"></i>Dimmer Lighting</li>
+								<li class=""><i class="fas fa-check text-success mr-1"></i>Home Wiring
+									Electrical</li>
+								<li class=""><i class="fas fa-check text-success mr-1"></i>Troubleshooting & Repairs
+								</li>
+								<li class=""><i class="fas fa-check text-success mr-1"></i>Wiring Replacement</li>
+							</div>
+						</ul>
+						<div class="row my-2">
+							<img src="img/services_img02.jpg" class="col-lg-6 ml-0 pl-0" alt="">
+							<img src="img/services_img03.jpg" class="col-lg-6 ml-0 pl-0" alt="">
+						</div>
+						<h3>Always Hire a Professionals</h3>
+						<p class="text-muted">No matter urgent any electrical repairs seem, it’s never okay to attempt
+							to
+							handle them
+							on your own. Trying to take care of electrical problems without professional training is
+							extremely dangerous. If you or someone else aren’t hurt during your attempt, there’s still a
+							chance that you’ve left something undone that poses a huge risk to you, your home, or your
+							family. In fact, faulty electrical wiring is the number one cause of house fires in the
+							United
+							States, according to the National Fire Protection Agency. So in order to make sure that your
+							home is safe, rely on a professional for any electrical services.</p>
+					</div>
+					<div class="row align-items-center">
+						<div class="col-6 mx-0 pl-0">
+							<a class="btn btn-light mr-2" href="#" role="button">Electrical</a>
+							<a class="btn btn-light mr-2" href="#" role="button">Repair</a>
+							<a class="btn btn-light mr-2" href="#" role="button">Upgrades</a>
+						</div>
+						<ul class="col-6 m-0 p-0 d-flex justify-content-end">
+							<li class="ml-3"><a href=""><i class="fab fa-facebook fa-2x text-dark"></i></a></li>
+							<li class="ml-3"><a href=""><i class="fab fa-instagram fa-2x text-dark"></i></a></li>
+							<li class="ml-3"><a href=""><i class="fab fa-twitter fa-2x text-dark"></i></a></li>
+						</ul>
+					</div>
+				</div>
+				<div class="col-lg-4">
+					<div class=""></div>
+					<h3 class="">Search</h3>
+					<form class="form-inline bordershadow">
+						<input class="form-control form-control-sm mr-3 w-75 border-0" type="text"
+							placeholder="Search text..." aria-label="Search">
+						<button class="btn btn-outline-none"><i class="fas fa-search" aria-hidden="true"></i></button>
+					</form>
+					<div class="bordershadow my-5">
+						<h3>Categories</h3>
+						<ul class="m-0 p-0">
+							<li class="p-2"><i class="fas fa-caret-right text-success mr-2"></i>Baseboard Heating
+								Installation</li>
+							<li class="p-2"><i class="fas fa-caret-right text-success mr-2"></i>Digital Thermostat
+								Installation</li>
+							<li class="p-2"><i class="fas fa-caret-right text-success mr-2"></i>Electrical Repairs</li>
+							<li class="p-2"><i class="fas fa-caret-right text-success mr-2"></i>Generator Repair</li>
+							<li class="p-2"><i class="fas fa-caret-right text-success mr-2"></i>Install a Ceiling Fan
+							</li>
+							<li class="p-2"><i class="fas fa-caret-right text-success mr-2"></i>Lighting Upgrades</li>
+							<li class="p-2"><i class="fas fa-caret-right text-success mr-2"></i>Outdoor and Motion
+								Lighting</li>
+							<li class="p-2"><i class="fas fa-caret-right text-success mr-2"></i>Panel Upgrades</li>
+							<li class="p-2"><i class="fas fa-caret-right text-success mr-2"></i>Uncategorized</li>
+							<li class="p-2"><i class="fas fa-caret-right text-success mr-2"></i>Surge Protection</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 	<!-- Emoji Navbar First -->
 
 
@@ -857,7 +1001,9 @@
 
 	<!-- baguetteBox -->
 	<script>
-		baguetteBox.run('.gallery');
+		baguetteBox.run('.gallery', {
+			buttons: false
+		});
 	</script>
 
 </body>
