--- a/index.html
+++ b/index.html
@@ -790,7 +790,7 @@
 					distinctio ipsa exercitationem iste amet sequi porro tenetur perferendis..</p>
 			</div>
 			<div class="row">
-				<div class="col-lg-8">
+				<div class="col-lg-8 my-3">
 					<img src="img/blog_img01.jpg" class="w-100" alt="">
 					<div class="">
 						<p class="mt-lg-5"><span class="mr-3 font-italic">23 Nov, 2016</span><span
@@ -846,8 +846,8 @@
 							</div>
 						</ul>
 						<div class="row my-2">
-							<img src="img/services_img02.jpg" class="col-lg-6 ml-0 pl-0" alt="">
-							<img src="img/services_img03.jpg" class="col-lg-6 ml-0 pl-0" alt="">
+							<img src="img/services_img02.jpg" class="col-lg-6 ml-0 pl-0 my-3" alt="">
+							<img src="img/services_img03.jpg" class="col-lg-6 ml-0 pl-0 my-3" alt="">
 						</div>
 						<h3>Always Hire a Professionals</h3>
 						<p class="text-muted">No matter urgent any electrical repairs seem, it’s never okay to attempt
@@ -874,7 +874,7 @@
 						</ul>
 					</div>
 				</div>
-				<div class="col-lg-4">
+				<div class="col-lg-4 my-3">
 					<div class="">
 						<h3 class="">Search</h3>
 						<form class="form-inline bordershadow">
