--- a/index.html
+++ b/index.html
@@ -118,12 +118,7 @@
 
 	<!-- Image Carousel -->
 	<div id="carousel1" class="carousel slide carousel-fade mb-lg-5" data-interval="4000" data-ride="carousel">
-		<!-- <ol class="carousel-indicators">
-			<li data-target="#carousel1" data-slide-to="0" class="active"></li>
-			<li data-target="#carousel1" data-slide-to="1"></li>
-			<li data-target="#carousel1" data-slide-to="2"></li>
-		</ol> -->
-		<div class="carousel-inner">
+			<div class="carousel-inner">
 			<div class="carousel-item active">
 				<img src="img/carousel/mainslide-01.jpg" class="d-block w-100" alt="First slide">
 				<div class="carousel-caption d-none d-md-block">
@@ -1097,12 +1092,51 @@
 
 
 
-	<!-- Start  -->
-
-	<!-- End  -->
-
-
 	<!-- Start Footer -->
+	<footer class="bg-dark">
+		<div class="container">
+		<div class="row">
+			<div class="col-lg-6 my-4">
+				<div class="d-flex">
+					<a class="text-light" href="#"><h3>Electrician</h3></a>
+					<p class="text-light ml-3">Our experienced electricians are highly trained in all aspects of electrical service, from office lighting and security systems to emergency repair.</p>
+				</div>
+			</div>
+		</div>
+	<div class="row">
+		<ul class="d-flex flex-column col-6">
+			<li class=""><a class="text-light" href="#">Home</a></li>
+			<li class=""><a class="text-light" href="#AboutUs">About Us</a></li>
+			<li class=""><a class="text-light" href="#Services">Services</a></li>
+			<li class=""><a class="text-light" href="#Prices">Prices</a></li>
+		</ul>
+		<ul class="d-flex flex-column col-6">
+			<li class=""><a class="text-light" href="#OurGallery">Gallery</a></li>
+			<li class=""><a class="text-light" href="#OurBlog">Blog</a></li>
+			<li class=""><a class="text-light" href="#OurFAQ">Faq</a></li>
+			<li class=""><a class="text-light" href="#Contact">Contact</a></li>
+		</ul>
+	</div>
+		<div class="row">
+			<div class="col-lg-12">
+				<div class="row my-3">
+					<div class="tb-item mr-3">
+						<i class="fas fa-map-marker-alt text-success"></i>
+						<p class="my-0 mx-2 text-light">8494 Signal Hill Road Manassas, VA, 20110</p>
+					</div>
+					<div class="tb-item mr-3">
+						<i class="far fa-clock text-success"></i>
+						<p class="my-0 mx-2 text-light">Mon-Fri 08:00 AM - 05:00 PM</p>
+					</div>
+					<div class="tb-item">
+						<i class="fas fa-phone mr-2 text-success"></i>
+						<a href="tel:1 (800) 7 65-43-21" class="my-0 text-light text-right">1 (800) 765-43-21</a>
+					</div>
+				</div>
+			</div>
+					</div>
+		
+	</footer>
 
 	<!-- End Footer -->
 
