--- a/index.html
+++ b/index.html
@@ -1080,62 +1080,63 @@
 			</div>
 		</div>
 	</section>
-	<section id="Contact">
-		<div class="container-fluid">
+	<!-- <section class="mt-3" id="Contact">
+		<div class="container">
 			<iframe
 				src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4997.108146875935!2d6.7681647776983445!3d51.227289868360145!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47b8ca1977193c49%3A0x52760fc4a2dc0f0!2sAltstadt%2C%2040213%20D%C3%BCsseldorf!5e0!3m2!1sen!2sde!4v1605782056388!5m2!1sen!2sde"
 				width="800" height="600" frameborder="0" style="border:0;" allowfullscreen="true" aria-hidden="false"
-				tabindex="0"></iframe>
+				tabindex="0" class=" w-100"></iframe>
 		</div>
 
-	</section>
+	</section> -->
 
 
 
 	<!-- Start Footer -->
-	<footer class="bg-dark">
+	<footer class="bg-dark mt-3">
 		<div class="container">
-		<div class="row">
-			<div class="col-lg-6 my-4">
-				<div class="d-flex">
-					<a class="text-light" href="#"><h3>Electrician</h3></a>
-					<p class="text-light ml-3">Our experienced electricians are highly trained in all aspects of electrical service, from office lighting and security systems to emergency repair.</p>
+			<div class="row">
+				<a class="text-light col-lg-6 my-3" href="#"><h3>Electrician</h3></a>
+				<p class="text-light col-lg-6 my-3">Our experienced electricians are highly trained in all aspects of electrical service, from office lighting and security systems to emergency repair.</p>
+			</div>
+			<div class="row">
+				<div class="col-sm-6 my-3">
+					<div class="row">
+						<ul class="d-flex flex-column col-6 px-0">
+							<li class=""><a class="text-light" href="#">Home</a></li>
+							<li class=""><a class="text-light" href="#AboutUs">About Us</a></li>
+							<li class=""><a class="text-light" href="#Services">Services</a></li>
+							<li class=""><a class="text-light" href="#Prices">Prices</a></li>
+						</ul>
+						<ul class="d-flex flex-column col-6 px-0">
+							<li class=""><a class="text-light" href="#OurGallery">Gallery</a></li>
+							<li class=""><a class="text-light" href="#OurBlog">Blog</a></li>
+							<li class=""><a class="text-light" href="#OurFAQ">Faq</a></li>
+							<li class=""><a class="text-light" href="#Contact">Contact</a></li>
+						</ul>
+					</div>
+					<div class="d-flex flex-column col-lg-12 px-0 my-2">
+						<div class="tb-item my-1">
+							<i class="fas fa-map-marker-alt text-success"></i>
+							<p class="my-0 mx-2 text-light">8494 Signal Hill Road Manassas, VA, 20110</p>
+						</div>
+						<div class="tb-item my-1">
+							<i class="far fa-clock text-success"></i>
+							<p class="my-0 mx-2 text-light">Mon-Fri 08:00 AM - 05:00 PM</p>
+						</div>
+						<div class="tb-item my-1">
+							<i class="fas fa-phone mr-2 text-success"></i>
+							<a href="tel:1 (800) 7 65-43-21" class="my-0 text-light text-right">1 (800) 765-43-21</a>
+						</div>
+					</div>
+					
 				</div>
+				<iframe
+					src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4997.108146875935!2d6.7681647776983445!3d51.227289868360145!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47b8ca1977193c49%3A0x52760fc4a2dc0f0!2sAltstadt%2C%2040213%20D%C3%BCsseldorf!5e0!3m2!1sen!2sde!4v1605782056388!5m2!1sen!2sde"
+					width="300" height="300" frameborder="0" style="border:0;" allowfullscreen="true" aria-hidden="false"
+					tabindex="0" class="w-100 col-sm-6 my-3"></iframe>
 			</div>
 		</div>
-	<div class="row">
-		<ul class="d-flex flex-column col-6">
-			<li class=""><a class="text-light" href="#">Home</a></li>
-			<li class=""><a class="text-light" href="#AboutUs">About Us</a></li>
-			<li class=""><a class="text-light" href="#Services">Services</a></li>
-			<li class=""><a class="text-light" href="#Prices">Prices</a></li>
-		</ul>
-		<ul class="d-flex flex-column col-6">
-			<li class=""><a class="text-light" href="#OurGallery">Gallery</a></li>
-			<li class=""><a class="text-light" href="#OurBlog">Blog</a></li>
-			<li class=""><a class="text-light" href="#OurFAQ">Faq</a></li>
-			<li class=""><a class="text-light" href="#Contact">Contact</a></li>
-		</ul>
-	</div>
-		<div class="row">
-			<div class="col-lg-12">
-				<div class="row my-3">
-					<div class="tb-item mr-3">
-						<i class="fas fa-map-marker-alt text-success"></i>
-						<p class="my-0 mx-2 text-light">8494 Signal Hill Road Manassas, VA, 20110</p>
-					</div>
-					<div class="tb-item mr-3">
-						<i class="far fa-clock text-success"></i>
-						<p class="my-0 mx-2 text-light">Mon-Fri 08:00 AM - 05:00 PM</p>
-					</div>
-					<div class="tb-item">
-						<i class="fas fa-phone mr-2 text-success"></i>
-						<a href="tel:1 (800) 7 65-43-21" class="my-0 text-light text-right">1 (800) 765-43-21</a>
-					</div>
-				</div>
-			</div>
-					</div>
-		
 	</footer>
 
 	<!-- End Footer -->
