--- a/index.html
+++ b/index.html
@@ -51,12 +51,9 @@
 				</div>
 			</div>
 		</div>
-
 	</div>
-	</div>
-	</div>
+	
 	<!-- End Top Bar -->
-
 
 	<!-- Navigation -->
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -90,7 +87,7 @@
 						</div>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#Prices">Prices</a>
+						<a class="nav-link" href="#multi-item-carousel">Prices</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="#OurGallery">Gallery</a>
@@ -469,9 +466,8 @@
 
 	<!--Prices -->
 	<!----Prices Showcase-->
-	<section id="Prices" class="">
+	<section id="Prices">
 		<div class="showcase">
-			<!-- <img src="img/box01-bg02-desktop.jpg" class="w-100" alt=""> -->
 			<div class="container">
 				<div class="row justify-content-end">
 					<div class="showcasecontent p-5 col-lg-5 col-md-6 col-sm-8">
@@ -1054,44 +1050,30 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-lg-10 mx-auto">
+				<div class="col-lg-10 mx-auto" id="Contact">
 					<h5 class="text-success mt-5">Send us your questions below</h5>
 					<h2 class="m-auto p-3">Ask Your Question</h2>
 					<p class="col-lg-8 mx-auto ">Are you stumped by a home wiring project or problem? Don't worry – we
 						are here to help. There are a number of options available for you.</p>
 
 					<form action="">
-						<input type="text" class="form-control bordershadow my-2" id="YourName" placeholder="Your Name">
+						<input type="text" class="form-control my-2" id="YourName" placeholder="Your Name">
 						<div class="row">
-							<div class="col-8 pl-0">
-								<input type="text" size="" class="form-control bordershadow my-2" id="staticEmail2"
-									value="email@example.com"></div>
-							<div class="col-4 pr-0"><input type="tel" class="form-control bordershadow my-2"
-									id="YourPhone" placeholder="Your Phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}"
-									required></div>
+							<div class="col-md-8 pl-0">
+								<input type="text" size="" class="form-control my-2" id="staticEmail2" value="email@example.com">
+							</div>
+							<div class="col-md-4 px-0"><input type="tel" class="form-control my-2" id="YourPhone" placeholder="Your Phone"
+									pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" required></div>
 						</div>
-						<textarea name="" id="" cols="30" rows="10" class="bordershadow my-2"></textarea>
+						<textarea name="" id="" cols="30" rows="10" class="my-2 w-100 form-control"></textarea>
 						<p class="text-muted">All Electrical work must be done by a qualified licensed electrician.</p>
-						<button type="submit" class="btn btn-success"><i class="fas fa-bolt text-white mr-2"></i>Ask
-							your
-							question</button>
+						<button type="submit" class="btn btn-success"><i class="fas fa-bolt text-white mr-2"></i>Ask your question</button>
 					</form>
 				</div>
 			</div>
 		</div>
 	</section>
-	<!-- <section class="mt-3" id="Contact">
-		<div class="container">
-			<iframe
-				src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4997.108146875935!2d6.7681647776983445!3d51.227289868360145!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47b8ca1977193c49%3A0x52760fc4a2dc0f0!2sAltstadt%2C%2040213%20D%C3%BCsseldorf!5e0!3m2!1sen!2sde!4v1605782056388!5m2!1sen!2sde"
-				width="800" height="600" frameborder="0" style="border:0;" allowfullscreen="true" aria-hidden="false"
-				tabindex="0" class=" w-100"></iframe>
-		</div>
-
-	</section> -->
-
-
-
+	
 	<!-- Start Footer -->
 	<footer class="bg-dark mt-3">
 		<div class="container">
@@ -1106,7 +1088,7 @@
 							<li class=""><a class="text-light" href="#">Home</a></li>
 							<li class=""><a class="text-light" href="#AboutUs">About Us</a></li>
 							<li class=""><a class="text-light" href="#Services">Services</a></li>
-							<li class=""><a class="text-light" href="#Prices">Prices</a></li>
+							<li class=""><a class="text-light" href="#multi-item-carousel">Prices</a></li>
 						</ul>
 						<ul class="d-flex flex-column col-6 px-0">
 							<li class=""><a class="text-light" href="#OurGallery">Gallery</a></li>
