--- a/index.html
+++ b/index.html
@@ -138,14 +138,6 @@
 				</div>
 			</div>
 		</div>
-		<!-- <a class="carousel-control-prev" href="#carousel1" role="button" data-slide="prev">
-			<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-			<span class="sr-only">Previous</span>
-		</a>
-		<a class="carousel-control-next" href="#carousel1" role="button" data-slide="next">
-			<span class="carousel-control-next-icon" aria-hidden="true"></span>
-			<span class="sr-only">Next</span>
-		</a> -->
 		<!-- Form -->
 		<div class="navbar navbar-expand-lg navbar-dark bg-dark py-3 container myform">
 			<div class="mx-auto">
@@ -1059,7 +1051,7 @@
 					<form action="">
 						<input type="text" class="form-control my-2" id="YourName" placeholder="Your Name">
 						<div class="row">
-							<div class="col-md-8 pl-0">
+							<div class="col-md-8 px-0">
 								<input type="text" size="" class="form-control my-2" id="staticEmail2" value="email@example.com">
 							</div>
 							<div class="col-md-4 px-0"><input type="tel" class="form-control my-2" id="YourPhone" placeholder="Your Phone"
